--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,13 @@
 
   </head>
 <body>
-  123
+    <div class="l-page g-limit g-centered">
+      <div class="l-page">
+        body
+      </div>
+    </div>
+    <div class="l-page-bottom g-limit g-centered">
+      footer
+    </div>
 </body>
 </html>
