main styles for columns

--- a/html/index.html
+++ b/html/index.html
@@ -21,13 +21,32 @@
 
   </head>
 <body>
-    <div class="l-page g-limit g-centered">
-      <div class="l-page">
-        body
+
+  <div class="l-page g-limit g-centered">
+    <div class="l-page">
+
+      <div class="m-header">
+        <div class="m-layout">
+
+          <div class="m-col-left">
+            left
+          </div>
+          <div class="m-col-center">
+            center
+          </div>
+
+          <div class="g-clear"><div></div></div>
+        </div>
       </div>
+
     </div>
-    <div class="l-page-bottom g-limit g-centered">
+  </div>
+
+  <div class="l-page-bottom g-limit g-centered">
+    <div class="m-layout">
       footer
     </div>
+  </div>
+
 </body>
 </html>
