bugfix in global styles, remove "l-" prefix

--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,8 @@
   </head>
 <body>
 
-  <div class="l-page g-limit g-centered">
-    <div class="l-page">
+  <div class="g-page g-limit g-centered">
+    <div class="g-page">
 
       <div class="m-header">
         <div class="m-layout">
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="l-page-bottom g-limit g-centered">
+  <div class="g-page-bottom g-limit g-centered">
     <div class="m-layout">
       footer
     </div>
