--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,15 @@
     <!--[if IE 7]>
       <link rel="stylesheet" href="./stylesheets/application.ie7.css" type="text/css" charset="utf-8">
     <![endif]-->
+    
+    <script src="javascripts/jquery/jquery.core-1.3.2.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/jquery/jquery.dependClass.js" type="text/javascript" charset="utf-8"></script>
+
+    <script src="javascripts/global/GLOBAL.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/global/browsers.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/global/events.js" type="text/javascript" charset="utf-8"></script>
+
+    <script src="stylesheets/plugins/b-search/javascripts/b-search.js" type="text/javascript" charset="utf-8"></script>
 
   </head>
 <body>
@@ -29,7 +38,16 @@
         <div class="m-layout">
 
           <div class="m-col-left">
-            left
+            <div class="search">
+              <div class="search-bg"><i class="l g-png"></i><i class="r g-png"></i></div>
+              <div class="search-in">
+                <form>
+                  <label>Search</label>
+                  <input name="q" type="search" prettysearch="yes" autocomplete="off" />
+                </form>
+              </div>
+            </div>
+            menu
           </div>
           <div class="m-col-center">
             center
