--- a/html/index.html
+++ b/html/index.html
@@ -38,16 +38,59 @@
         <div class="m-layout">
 
           <div class="m-col-left">
+
             <div class="search">
               <div class="search-bg"><i class="l g-png"></i><i class="r g-png"></i></div>
               <div class="search-in">
-                <form>
+                <form action="./" method="get">
                   <label>Search</label>
                   <input name="q" type="search" prettysearch="yes" autocomplete="off" />
                 </form>
               </div>
             </div>
-            menu
+            
+            <div class="menu">
+              <div class="menu-top g-png"></div>
+              <ul>
+                <li class="selected">
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <b class="g-color">Home</b>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">News</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Music</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Programmes</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Presenters</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Community board</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Encouraging word</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">About us</a>
+                </li>
+                <li>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Links</a>
+                </li>
+              </ul>
+              <div class="menu-bottom g-png"></div>
+            </div>
           </div>
           <div class="m-col-center">
             center
