--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
                 </li>
                 <li>
                   <i class="line"></i><i class="l"></i><i class="r"></i>
-                  <a href="/">Encouraging word</a>
+                  <a href="/">Blog</a>
                 </li>
                 <li>
                   <i class="line"></i><i class="l"></i><i class="r"></i>
