--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                   <i class="line"></i><i class="l"></i><i class="r"></i>
-                  <a href="/">Community board</a>
+                  <a href="/">Blog</a>
                 </li>
                 <li>
                   <i class="line"></i><i class="l"></i><i class="r"></i>
