--- a/html/index.html
+++ b/html/index.html
@@ -105,7 +105,28 @@
             </div>
           </div>
           <div class="m-col-center">
-            center
+            <div class="m-col-center-left"></div>
+            <div class="m-col-center-right">
+              <div class="m-col-1">
+                <ul class="top-menu">
+                  <li><a class="g-link-inv" href="/">Donate</a></li>
+                  <li><a href="/">Volunteers needed</a></li>
+                  <li><a href="/">Tell a friend</a></li>
+                </ul>
+              </div>
+              <div class="m-col-2">
+                <ul class="top-menu">
+                  <li class="popup">
+                    <a href="/"><i></i>Listen now!</a><br/>
+                    <span class="g-color"><strong>Charizma</strong><br/>Run to God</span>
+                  </li>
+                  <li class="music">
+                    <a href="/"><i></i>winamp</a>
+                  </li>
+                </ul>
+                
+              </div>
+            </div>
           </div>
 
           <div class="g-clear"><div></div></div>
