--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,9 @@
     <script src="javascripts/global/GLOBAL.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/global/browsers.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/global/events.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/global/swfobject.js" type="text/javascript" charset="utf-8"></script>
+
+    <script src="javascripts/player.js" type="text/javascript" charset="utf-8"></script>
 
     <script src="stylesheets/plugins/b-search/javascripts/b-search.js" type="text/javascript" charset="utf-8"></script>
 
@@ -124,7 +127,10 @@
                     <a href="/"><i></i>winamp</a>
                   </li>
                 </ul>
-                
+                <div id="lifefmPlayer">
+                 	<strong>Sorry this site have a flash based native radio and needed adobe flash 8+ support. </strong><br />
+              	  <a href="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">Download Flash here.</a>
+                </div>
               </div>
             </div>
           </div>
