logo, service icons and correct radio

--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,7 @@
 
           <div class="m-col-left">
 
-            <div class="search">
+            <div class="m-header-search">
               <div class="search-bg"><i class="l g-png"></i><i class="r g-png"></i></div>
               <div class="search-in">
                 <form action="./" method="get">
@@ -108,7 +108,16 @@
             </div>
           </div>
           <div class="m-col-center">
-            <div class="m-col-center-left"></div>
+            <div class="m-col-center-left">
+              <div class="logo">
+                <div class="cloud"></div>
+                <ul class="service">
+                  <li class="selected"><i class="home" title="Home"></i></li>
+                  <li><a href="/"><i class="search" title="Search"></i></a></li>
+                  <li><a href="/"><i class="contacts" title="Contact us"></i></a></li>
+                </ul>
+              </div>
+            </div>
             <div class="m-col-center-right">
               <div class="m-col-1">
                 <ul class="top-menu">
@@ -120,7 +129,7 @@
               <div class="m-col-2">
                 <ul class="top-menu">
                   <li class="popup">
-                    <a href="/"><i></i>Listen now!</a><br/>
+                    <a href="/"><i></i>Listen now!</a><hr/><br/>
                     <span class="g-color"><strong>Charizma</strong><br/>Run to God</span>
                   </li>
                   <li class="music">
