--- a/html/index.html
+++ b/html/index.html
@@ -101,6 +101,11 @@
                 <li>
                   <i class="slider"></i>
                   <i class="line"></i><i class="l"></i><i class="r"></i>
+                  <a href="/">Contact us</a>
+                </li>
+                <li>
+                  <i class="slider"></i>
+                  <i class="line"></i><i class="l"></i><i class="r"></i>
                   <a href="/">Links</a>
                 </li>
               </ul>
