--- a/html/index.html
+++ b/html/index.html
@@ -142,7 +142,7 @@
                   </li>
                 </ul>
                 <div id="lifefmPlayer">
-                 	<strong>Sorry this site have a flash based native radio and needed adobe flash 8+ support. </strong><br />
+                 	<strong>Sorry, this site has a flash based native radio and adobe flash 8+ is needed. </strong><br />
               	  <a href="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash">Download Flash here.</a>
                 </div>
               </div>
