--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <title>lifefm</title>
 
     <link rel="stylesheet" href="./stylesheets/application.css" type="text/css" charset="utf-8">
+
     <!--[if lt IE 8]>
       <xml:namespace ns="urn:schemas-microsoft-com:vml" prefix="v" />
       <link rel="stylesheet" href="./stylesheets/application.ie.css" type="text/css" charset="utf-8">
@@ -33,7 +34,7 @@
 
   </head>
 <body>
-
+  
   <div class="g-page g-limit g-centered">
     <div class="g-page">
 
@@ -147,10 +148,28 @@
                 </div>
               </div>
             </div>
+            <div class="g-clear"><div></div></div>
+            <div class="banner">
+              <div class="b-round b-round_10-eeede3">banner</div>
+            </div>
+            <div class="verse">
+              <div class="m-col-center-left">
+                <h2>Verse of The Day<span>(Romans 12:1)</span></h2>
+              </div>
+              <div class="m-col-center-right">
+                <p>&ldquo;For the word of God is living and active. Sharper than any double-edged sword, it penetrates even to dividing soul and spirit, joints and marrow; it judges the thoughts and attitudes of the heart.&rdquo;</p>
+              </div>
+              <div class="g-clear"><div></div></div>
+            </div>
+            
           </div>
 
           <div class="g-clear"><div></div></div>
         </div>
+      </div>
+      <div class="g-clear"><div></div></div>
+      <div class="m-layout">
+        123
       </div>
 
     </div>
