--- a/html/index.html
+++ b/html/index.html
@@ -169,15 +169,165 @@
       </div>
       <div class="g-clear"><div></div></div>
       <div class="m-layout">
-        123
-      </div>
+        <div class="m-col-left">
+          <h1><span class="g-color">Music</span> top 10</h1>
+          <ul class="m-music-top">
+            <li class="first">
+              <strong class="g-color">1.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Superchic[k]</a><br/>Hold</p>
+            </li>
+            <li class="first">
+              <strong class="g-color">2.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Brandon Heath</a><br/>Give Me Your Eyes</p>
+            </li>
+            <li class="first">
+              <strong class="g-color">3.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Mark Harris</a><br/>All for the Glory of You</p>
+            </li>
+            <li>
+              <strong>4.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Jaymes Reunion</a><br/>Fine</p>
+            </li>
+            <li>
+              <strong>5.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">MercyMe</a><br/>You Reign</p>
+            </li>
+            <li>
+              <strong>6.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Jeremy Camp</a><br/>There Will Be A Day</p>
+            </li>
+            <li>
+              <strong>7.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Keith & Kristyn Getty</a><br/>In Christ alone</p>
+            </li>
+            <li>
+              <strong>8.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Relient K</a><br/>Be my escape</p>
+            </li>
+            <li>
+              <strong>9.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Jennifer Knapp</a><br/>A little more</p>
+            </li>
+            <li>
+              <strong>10.</strong>
+              <div class="b-round b-round_2-999999">
+                <a href="/"><img src="./images/pic40x30.jpg" width="40" height="30" /></a>
+              </div>
+              <p><a class="g-link-inv" href="/">Chris Tomlin</a><br/>Amazing Grace</p>
+            </li>
+          </ul>
+        </div>
+        <div class="m-col-center">
+          <div class="m-col-center-left">
+            <h1><a href="/">Wall of Prayer</a></h1>
 
+            <div class="m-pray-wall">
+              <div class="m-pray">
+                <div class="b-round b-round_10-eeede3">
+                  <div class="m-pray-text">
+                    Pray for the Broadcasting Commission, for our dealings with them and that our negotiations can be concluded quickly.
+                  </div>
+                </div>
+                <div class="m-pray-author"><i class="corner g-png"></i><span class="g-color">Anne Marie</span>, Iraq</div>
+              </div>
+              <div class="m-pray">
+                <div class="b-round b-round_10-eeede3">
+                  <div class="m-pray-text">
+                    Please just pray for my uncle and his wife Liz, 10 yr old son Dustin,and his two girls 1 yr old Raynee and 1 yr old Ryha. God Bless!!
+                  </div>
+                </div>
+                <div class="m-pray-author"><i class="corner g-png"></i><span class="g-color">Terry Scolley</span>, Cork</div>
+              </div>
+              <div class="m-pray">
+                <div class="b-round b-round_10-eeede3">
+                  <div class="m-pray-text">
+                    Please pray for Michael to be safe and close to God. He is having alot of trouble keeping his faith faced with the things he is seeing daily.
+                  </div>
+                </div>
+                <div class="m-pray-author"><i class="corner g-png"></i><span class="g-color">Michael Whaley</span>, Cork</div>
+              </div>
+            </div>
+
+          </div>
+          <div class="m-col-center-right">
+            <h1><a href="/">Latest news</a></h1>
+            <dl class="m-news">
+              <dt class="g-color">Financial Support</dt>
+              <dd>
+                <p>We need <a href="/">financial support</a> for the day-today operation of LifeFM. Our heartfelt thanks go to those who have given generously to the station, but we still have a long way to go!</p>
+                <ul class="dash">
+                  <li><em>Account Name</em> <big>"LIFEFM"</big></li>
+                  <li><em>Sort code</em> <big>"985488"</big></li>
+                  <li><em>Account No</em> <big>"65640032"</big></li>
+                </ul>
+              </dd>
+              <dt class="g-color">The Story So Far</dt>
+              <dd>
+                <p>After years of sowing in tears and walking by faith, the Gospel is now out over the <a href="/">airwaves of Cork</a>.</p>
+              </dd>
+              <dt class="g-color">The High Dive</dt>
+              <dd>
+                <p>Claire Bell and some friends have jumped in to help raise funds and are planning a sponsored jump from an aeroplane around Easter. They are looking for sponsors.Please contact Claire directly on 086 8371180 for more information. Have you any other way-out ideas for fundraising?</p>
+              </dd>
+            </dl>
+          </div>
+          
+          <div class="g-clear"><div></div></div>
+          
+          <h1><a href="/">Recipe of the Week</a></h1>
+          <div class="m-recipe">
+            <div class="b-round b-round_2-999999">
+              <a href="/"><img src="./images/pic115x90.jpg" width="115" height="90" /></a>
+            </div>
+            <div class="m-recipe-text">
+              <h2><a class="g-link-inv" href="/">Chicken Paella</a></h2>
+              <p>Valencia is a region on the Mediterranean coast of Spain, between Barcelona and Murcia that is known for its rice dishes. There are as many versions of paella as there are cook in Spain. Originally paella was a dish made in Valencia using chicken, rabbit, snails and three kinds of fresh beans...</p>
+            </div>
+            <div class="g-clear"><div></div></div>
+          </div>
+        </div>
+      </div>
+      <div class="g-clear"><div></div></div>
     </div>
   </div>
 
   <div class="g-page-bottom g-limit g-centered">
-    <div class="m-layout">
-      footer
+    <div class="m-footer">
+      <div class="m-layout">
+        <div class="m-col-left">
+          <p class="copyright">&copy; 2008 Life Fm. All rights reserved.<br/><a class="g-link-inv" href="/">Login for staff</a></p>
+        </div>
+        <div class="m-col-center">
+          <p><a class="g-pseudo-link" href="#"><span>Subscribe to Newsletter</span></a></p>
+        </div>
+      </div>
     </div>
   </div>
 
