bubble to headers and lock to footer

--- a/html/index.html
+++ b/html/index.html
@@ -246,7 +246,7 @@
         </div>
         <div class="m-col-center">
           <div class="m-col-center-left">
-            <h1><a href="/">Wall of Prayer</a></h1>
+            <h1><a href="/">Wall of Prayer</a><span class="m-header-bubble"><i class="corner g-png"></i><a href="/"><div class="b-round b-round_8-c41528"><span>say...</span></div></a></span></h1>
 
             <div class="m-pray-wall">
               <div class="m-pray">
@@ -277,7 +277,7 @@
 
           </div>
           <div class="m-col-center-right">
-            <h1><a href="/">Latest news</a></h1>
+            <h1><a href="/">Latest news</a><span class="m-header-bubble m-header-bubble_rss"><a href="/"><div class="b-round b-round_8-c41528"><span>RSS</span></div></a></span></h1>
             <dl class="m-news">
               <dt class="g-color">Financial Support</dt>
               <dd>
@@ -322,7 +322,7 @@
     <div class="m-footer">
       <div class="m-layout">
         <div class="m-col-left">
-          <p class="copyright">&copy; 2008 Life Fm. All rights reserved.<br/><a class="g-link-inv" href="/">Login for staff</a></p>
+          <p class="copyright">&copy; 2008 Life Fm. All rights reserved.<br/><a class="g-link-inv" href="/">Login for staff <i class="m-icon m-icon-lock"></i></a></p>
         </div>
         <div class="m-col-center">
           <p><a class="g-pseudo-link" href="#"><span>Subscribe to Newsletter</span></a></p>
